--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,6 @@
 body {
             font-family: Arial, sans-serif;
-            background-image: url("./background.jpeg");
+            background-image: url("../image/background.jpeg");
             background-size: cover;
             margin: 0;
         }
